fix alignment

--- a/src/app/project-overview/style.scss
+++ b/src/app/project-overview/style.scss
@@ -30,9 +30,9 @@
 
 .first-visit-overview-message {
   margin-bottom: 20px;
-  padding: 10px;
+  padding: 10px 10px 10px 30px;
 
-  i .km-icon-close {
+  .km-icon-close {
     position: fixed;
     right: 40px;
   }
